[build-system]
requires = [
    "hatchling>=1.24.2",
    "hatch-vcs>=0.4.0"
]
build-backend = "hatchling.build"

[project]
name = "xpytools"
dynamic = ["version"]
description = "Python utilities for safe type handling, data manipulation, and runtime validation."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Kydoimos97", email = "willemvanderschans97+dev@gmail.com " }  # optional
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent"
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/Kydoimos97/xpytools"
"Author GitHub" = "https://github.com/Kydoimos97"
"Author PyPI" = "https://pypi.org/user/Kydoimos97/"
"PyPI" = "https://pypi.org/project/xpytools/"

[tool.hatch.version]
source = "vcs"
tag-pattern = "^v(?P<version>\\d+\\.\\d+\\.\\d+)$"

[tool.hatch.build.targets.sdist]
include = ["xpytools", "pyproject.toml", "README.md", "LICENSE", 'uv.lock']

[tool.hatch.build.targets.wheel]
packages = ["xpytools"]

[dependency-groups]

# Core development / tooling

dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-sugar>=0.9.7",
    "pytest-xdist>=3.3.0",
    "mypy>=1.18.2",
    "mypy-boto3-s3>=1.40.61",
    "ruff>=0.14.3"
]


# DataFrame and numeric utilities

df = [
    "pandas>=2.3.3",
    "numpy==1.26.4"  # pinned for stability
]


# Imaging / network helpers

img = [
    "pillow>=12.0.0",
    "requests>=2.32,<3.0"
]


# Text / string cleaning

txt = [
    "clean-text>=0.6.0"
]


# Schema / validation utilities

pydantic = [
    "pydantic>=2.12.3"
]


# Documentation

docs = [
    "mkdocs>=1.6.0",
    "mkdocstrings[python]>=0.25.0",
    "markdown-include>=0.8.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "ruff>=0.14.3"
]


# Client-facing aggregate (runtime-only)

all = [
    { include-group = "df" },
    { include-group = "img" },
    { include-group = "txt" },
    { include-group = "pydantic" }
]


# Developer aggregate (full environment)

dev-all = [
    { include-group = "all" },
    { include-group = "dev" },
    { include-group = "docs" }
]



[tool.pytest.ini_options]
-
# Test discovery and behavior
-
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--disable-warnings",
    "-ra",
    "-s"
]

markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests"
]

filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

import_mode = "importlib"

[tool.coverage.run]
source = ["xpytools"]
omit = [
    "tests/*",
    "*/__init__.py"
]

[tool.coverage.report]
omit = [
    "tests/*",
    "*/__init__.py"
]
show_missing = true
skip_empty = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
